GNU SASL LIBRARY NEWS -- History of user-visible changes.
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
See the end for copying conditions.

* Version 1.0 (unreleased)

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 0.2.18 (released 2007-06-07)

** Update gnulib files.
Fixes cross-compilation to uClinux.

** API and ABI modifications.
No changes since last version.

* Version 0.2.17 (released 2007-06-01)

** GNU SASL is now developed using Git instead of CVS.
A public git mirror is available from <http://repo.or.cz/w/gsasl.git>.

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 0.2.16 (released 2007-04-20)

** Translation updates.

** Fix gsasl_check_version logic.

** Now uses autoconf 2.61, automake 1.10, gettext 0.16.1.

** API and ABI modifications.
No changes since last version.

* Version 0.2.15 (released 2006-08-22)

** Changed libgsasl shared library version.
The shared library version was not incremented correctly in the last
release, even though new APIs were added.

* Version 0.2.14 (released 2006-08-19)

** New functions to set per-session application hooks.
Earlier only the global functions gsasl_callback_hook_set and
gsasl_callback_hook_set were available, but with the new
gsasl_session_hook_set and gsasl_session_hook_get, it is possible to
store and retrieve per-session specific data.  This simplifies
callback handling in applications.  Suggested by James Mansion.

The new function supersede the gsasl_client_application_data_get,
gsasl_client_application_data_set, gsasl_server_application_data_get,
and gsasl_server_application_data_set functions in the obsolete API.

** API and ABI modifications.
gsasl_session_hook_get,
gsasl_session_hook_set: ADD.

* Version 0.2.13 (released 2006-06-14)

** Update of gnulib files.
Further improves portability to MinGW.

** Fix memory leak in gsasl_client_listmech and gsasl_server_listmech.
