@@ -4,10 +4,17 @@ See the end for copying conditions.
 
 * Version 1.0 (unreleased)
 
+** New API gsasl_free to release memory allocated by other functions.
+This is useful on Windows where libgsasl uses one CRT and the
+application uses another CRT.  Then malloc/free will not use the same
+heap.  This happens if you build libgsasl using mingw32 and the
+application with Visual Studio.  Suggested by Adam Strzelecki
+<ono@java.pl>.
+
 ** Update gnulib files.
 
 ** API and ABI modifications.
-No changes since last version.
+gsasl_free: ADD.
 
 * Version 0.2.18 (released 2007-06-07)
 
